--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,6 @@
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
-.idea/*
 # User-specific stuff
 .idea/**/workspace.xml
 .idea/**/tasks.xml
@@ -116,3 +115,7 @@ fabric.properties
 .idea/**/azureSettings.xml
 
 # End of https://www.toptal.com/developers/gitignore/api/pycharm
+
+.idea/*
+*.tex
+__pycache__/*
