--- a/.gitignore
+++ b/.gitignore
@@ -116,8 +116,8 @@ fabric.properties
 
 # End of https://www.toptal.com/developers/gitignore/api/pycharm
 
-.idea/*
+.idea/**
 *.tex
-__pycache__/*
-*/__pycache__/*
-*/*/__pycache__/*
+__pycache__/**
+**/__pycache__/**
+**/**/__pycache__/**
